# StateMachine_C

./: CMakeLists.txt  README.md  build_test.sh  test.c
Car_StateMachine/: sm.c  sm.h
